lowered the divs of the benefits image in screens 1200+ to make sure text didnt overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -278,10 +278,12 @@ main {
 
     #benefits-mental > div {
         align-self: flex-start;
+        margin-top: 25px;
     }
 
     #benefits-physical > div {
         align-self: flex-end;
+        margin-top: 25px;
     }
 
 }
